--- a/client/game/styles.inline.scss
+++ b/client/game/styles.inline.scss
@@ -1,13 +1,6 @@
 .game {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     position: relative;
     width: 100%;
     height: 100%;
-
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    background-color: #330000;
-    color: #ffffff;
 }
